k8s-scripts/namespace.yaml
# 00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskflow
  labels:
    # key=value pairs used for grouping and filtering resources
    app.kubernetes.io/managed-by: helm
    environment: production
